tests/ui/fail/incorrect_item/enum.rs
use mergeme::Merge;

#[derive(Merge)]
#[partial(PartialChoice)]
enum Choice {
    A,
    B,
}

fn main() {}
