tests/ui/fail/incorrect_item/enum.stderr
error: `#[derive(Merge)]` only works on structs, not enums
 --> tests/ui/fail/incorrect_item/enum.rs:5:1
  |
5 | enum Choice {
  | ^^^^
